; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_get_ctx.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_get_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.script_ctx = type { i32 }

@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"ctx\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.script_ctx* (i32*)* @get_ctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.script_ctx* @get_ctx(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.script_ctx*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %6 = call i32 @lua_getfield(i32* %4, i32 %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %2, align 8
  %8 = call %struct.script_ctx* @lua_touserdata(i32* %7, i32 -1)
  store %struct.script_ctx* %8, %struct.script_ctx** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @lua_pop(i32* %9, i32 1)
  %11 = load %struct.script_ctx*, %struct.script_ctx** %3, align 8
  %12 = call i32 @assert(%struct.script_ctx* %11)
  %13 = load %struct.script_ctx*, %struct.script_ctx** %3, align 8
  ret %struct.script_ctx* %13
}

declare dso_local i32 @lua_getfield(i32*, i32, i8*) #1

declare dso_local %struct.script_ctx* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @assert(%struct.script_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
